[gd_scene load_steps=18 format=3 uid="uid://dstqf8k0rjqbf"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_4wcfn"]
[ext_resource type="Texture2D" uid="uid://bpitc1jqrkwts" path="res://Sprites/background-day.png" id="1_frwya"]
[ext_resource type="Texture2D" uid="uid://dces6qayhfjlr" path="res://Sprites/base.png" id="3_ibprx"]
[ext_resource type="PackedScene" uid="uid://dvqwt8j15fk82" path="res://Scenes/player.tscn" id="4_8ldun"]
[ext_resource type="Texture2D" uid="uid://dge74qx7khvm4" path="res://Sprites/message.png" id="5_6xkty"]
[ext_resource type="AudioStream" uid="uid://c2pi78nyc6voo" path="res://audio/wing.wav" id="5_sivpu"]
[ext_resource type="Texture2D" uid="uid://srri81crxg1c" path="res://Sprites/gameover.png" id="6_77b3a"]
[ext_resource type="Texture2D" uid="uid://d2xfc7qy4ib0m" path="res://Sprites/table_score.png" id="8_lhfku"]
[ext_resource type="FontFile" uid="uid://bax04h37txxl1" path="res://Fonts/flappy-font.ttf" id="8_xqh5n"]
[ext_resource type="Texture2D" uid="uid://ofji8cboxwrs" path="res://Sprites/button.png" id="9_3wss7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs1ey"]
size = Vector2(341.144, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mspf"]
size = Vector2(335.552, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sryw"]
size = Vector2(480, 650)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ceac0"]
texture = ExtResource("8_lhfku")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3knth"]
texture = ExtResource("9_3wss7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6lyek"]
texture = ExtResource("9_3wss7")
modulate_color = Color(0.878431, 0.878431, 0.878431, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l12ke"]
texture = ExtResource("9_3wss7")

[node name="main" type="Node2D" groups=["Player"]]
y_sort_enabled = true
script = ExtResource("1_4wcfn")

[node name="foreground" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="foreground"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="foreground/ParallaxBackground"]
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="foreground/ParallaxBackground/ParallaxLayer"]
position = Vector2(239, 324)
scale = Vector2(1.67361, 1.26563)
texture = ExtResource("1_frwya")

[node name="background" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="background"]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="background/ParallaxBackground"]
z_index = 1
y_sort_enabled = true
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="background/ParallaxBackground/ParallaxLayer"]
position = Vector2(239.68, 592)
scale = Vector2(1.43048, 1)
texture = ExtResource("3_ibprx")

[node name="floor" type="Area2D" parent="background/ParallaxBackground/ParallaxLayer/Sprite2D"]
position = Vector2(0.223709, -12)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/ParallaxBackground/ParallaxLayer/Sprite2D/floor"]
light_mask = 2
visibility_layer = 2
position = Vector2(0.223709, -42)
shape = SubResource("RectangleShape2D_qs1ey")

[node name="RigidBody2D" type="RigidBody2D" parent="background/ParallaxBackground/ParallaxLayer/Sprite2D"]
position = Vector2(0, -2)
disable_mode = 1
collision_mask = 4
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/ParallaxBackground/ParallaxLayer/Sprite2D/RigidBody2D"]
position = Vector2(0.22374, -42)
shape = SubResource("RectangleShape2D_3mspf")

[node name="Player" parent="." instance=ExtResource("4_8ldun")]
light_mask = 0
position = Vector2(248, 264)
platform_on_leave = 1
platform_floor_layers = 4294901761

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Player"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_sivpu")
volume_db = -25.0

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="UI" type="CanvasLayer" parent="."]

[node name="Area2D" type="Area2D" parent="UI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Area2D"]
position = Vector2(240, 325)
shape = SubResource("RectangleShape2D_1sryw")

[node name="StartGame" type="Sprite2D" parent="UI"]
position = Vector2(240, 250)
scale = Vector2(1.36, 1.4)
texture = ExtResource("5_6xkty")

[node name="GameOver" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(230, 212.5)
scale = Vector2(1.35417, 1.78571)
texture = ExtResource("6_77b3a")

[node name="Score" type="Label" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 102.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("8_xqh5n")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_Score" type="Panel" parent="UI"]
visible = false
offset_left = 100.0
offset_top = 310.0
offset_right = 380.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ceac0")

[node name="Best_Score" type="Label" parent="UI/Panel_Score"]
layout_mode = 0
offset_left = 210.0
offset_top = 90.0
offset_right = 250.0
offset_bottom = 135.0
theme_override_fonts/font = ExtResource("8_xqh5n")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Current_Score" type="Label" parent="UI/Panel_Score"]
layout_mode = 0
offset_left = 210.0
offset_top = 30.0
offset_right = 250.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("8_xqh5n")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="UI/Panel_Score"]
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 220.0
offset_bottom = 280.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3knth")
theme_override_styles/hover = SubResource("StyleBoxTexture_6lyek")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l12ke")
icon_alignment = 1
expand_icon = true

[connection signal="body_entered" from="background/ParallaxBackground/ParallaxLayer/Sprite2D/floor" to="." method="_on_floor_body_entered"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="UI/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="pressed" from="UI/Panel_Score/Button" to="." method="_on_button_pressed"]
